[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Icons/delete.png" type="Texture" id=1]
[ext_resource path="res://fonts/ld53/ld52_def_xsmall.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/WaypointView.gd" type="Script" id=3]
[ext_resource path="res://Assets/Icons/water.png" type="Texture" id=4]
[ext_resource path="res://Assets/Icons/salad.png" type="Texture" id=5]
[ext_resource path="res://Assets/Icons/meat.png" type="Texture" id=6]
[ext_resource path="res://Assets/Icons/vegetable.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/burger.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.168627, 0.545098, 0.0509804, 1 )

[node name="WaypointView" type="MarginContainer"]
margin_right = 570.0
margin_bottom = 36.0
size_flags_horizontal = 3
script = ExtResource( 3 )
np_index_label = NodePath("HBoxContainer/IndexLabel")
np_direction_toggle_button = NodePath("HBoxContainer/DirectionToggleButton")
np_cargo_count_item_list = NodePath("HBoxContainer/CargoCountItemList")
np_cargo_item_list = NodePath("HBoxContainer/CargoItemList")
np_to_from_label = NodePath("HBoxContainer/ToFromLabel")
np_target_button = NodePath("HBoxContainer/TargetButton")
np_delete_button = NodePath("HBoxContainer/DeleteButton")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 570.0
margin_bottom = 36.0
custom_constants/separation = 0

[node name="IndexLabel" type="Label" parent="HBoxContainer"]
margin_top = 7.0
margin_right = 27.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "#1"

[node name="DirectionToggleButton" type="Button" parent="HBoxContainer"]
margin_left = 27.0
margin_right = 107.0
margin_bottom = 36.0
rect_min_size = Vector2( 80, 0 )
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
text = "Deliver"

[node name="CargoCountItemList" type="OptionButton" parent="HBoxContainer"]
margin_left = 107.0
margin_right = 149.0
margin_bottom = 36.0
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
text = "1"
flat = true
items = [ "1", null, false, 0, null, "2", null, false, 1, null, "3", null, false, 2, null ]
selected = 0

[node name="CargoItemList" type="OptionButton" parent="HBoxContainer"]
margin_left = 149.0
margin_right = 199.0
margin_bottom = 36.0
rect_min_size = Vector2( 50, 0 )
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
icon = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true
items = [ "", ExtResource( 4 ), false, 0, null, "", ExtResource( 7 ), false, 1, null, "", ExtResource( 6 ), false, 2, null, "", ExtResource( 5 ), false, 3, null, "", ExtResource( 8 ), false, 4, null ]
selected = 0

[node name="ToFromLabel" type="Label" parent="HBoxContainer"]
margin_left = 199.0
margin_top = 7.0
margin_right = 244.0
margin_bottom = 29.0
rect_min_size = Vector2( 45, 0 )
custom_fonts/font = ExtResource( 2 )
text = "to"
align = 1
valign = 1

[node name="TargetButton" type="Button" parent="HBoxContainer"]
margin_left = 244.0
margin_right = 546.0
margin_bottom = 36.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Pick Target"

[node name="DeleteButton" type="Button" parent="HBoxContainer"]
margin_left = 546.0
margin_top = 8.0
margin_right = 570.0
margin_bottom = 28.0
rect_min_size = Vector2( 24, 0 )
focus_mode = 0
size_flags_vertical = 4
icon = ExtResource( 1 )
flat = true
expand_icon = true

[connection signal="toggled" from="HBoxContainer/DirectionToggleButton" to="." method="_on_DirectionToggleButton_toggled"]
[connection signal="item_selected" from="HBoxContainer/CargoCountItemList" to="." method="_on_CargoCountItemList_item_selected"]
[connection signal="item_selected" from="HBoxContainer/CargoItemList" to="." method="_on_CargoItemList_item_selected"]
[connection signal="toggled" from="HBoxContainer/TargetButton" to="." method="_on_TargetButton_toggled"]
[connection signal="pressed" from="HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
